# openw3

./: CMakeLists.txt  CMakePresets.json
dev/src/common/core/: 2darray.cpp  2darray.h  CMakeLists.txt  algorithms.h  allocArray.h  analyzer.cpp  analyzer.h  asyncFileAccess.cpp  asyncFileAccess.h  asyncIO.cpp  asyncIO.h  asyncLoadToken.cpp  asyncLoadToken.h  atomicSharedPtr.h  atomicSharedPtr.inl  atomicWeakPtr.h  atomicWeakPtr.inl  basicDataBlob.cpp  basicDataBlob.h  basicTextBuilder.cpp  basicTextBuilder.h  basicURL.cpp  basicURL.h  bezier2d.cpp  bezier2d.h  bezier2dHandle.cpp  bezier2dHandle.h  bezierUtils.cpp  bezierUtils.h  bitField.cpp  bitField.h  bitFieldBuilder.h  bitset.cpp  bitset.h  bufferFileInterchangeEntry.h  bufferFileInterchangeEntry.inl  bufferSpan.cpp  bufferSpan.h  bufferedReader.h  bufferedTempFile.cpp  (+775 more)
dev/src/common/engine/: Bezier_Polynomials.cpp  Bezier_Polynomials.h  CMakeLists.txt  EngineBezierTools.cpp  EngineBezierTools.h  IBezierOwner.h  MusicSystem.cpp  MusicSystem.h  QuadBezier_Math2.h  QuadraticBezier2.cpp  QuadraticBezier2.h  QuadraticBezier_Curve.h  QuadraticBezier_Knots.h  QuadraticBezier_Segment.h  QuadraticBezier_Segment2.cpp  QuadraticBezier_Segment2.h  abstractMarkerSystem.cpp  abstractMarkerSystem.h  abstractPathRater.cpp  abstractPathRater.h  actorInterface.h  actorLod.h  allocatedBehaviorGraphOutput.cpp  allocatedBehaviorGraphOutput.h  animBehaviorsAndSetsParam.cpp  animBehaviorsAndSetsParam.h  animBuffer.h  animCacheEntry.h  animConstraintsParam.cpp  animConstraintsParam.h  animDangleBufferComponent.cpp  animDangleBufferComponent.h  animDangleComponent.cpp  animDangleComponent.h  animDangleConstraint.cpp  animDangleConstraint.h  animGlobalParam.cpp  animGlobalParam.h  animHingeConstraint.cpp  animHingeConstraint.h  (+2231 more)
dev/src/common/game/: 2daProperties.cpp  2daProperties.h  CMakeLists.txt  ProjectileTargets.cpp  ProjectileTargets.h  ProjectileTrajectory.cpp  ProjectileTrajectory.h  StorySceneEventCameraLight.cpp  StorySceneEventCameraLight.h  StorySceneEventWorldEntityEffect.cpp  StorySceneEventWorldEntityEffect.h  abilities.cpp  abilities.h  actionAreaComponent.cpp  actionAreaComponent.h  actionAreaComponentEditorData.cpp  actionAreaVertex.cpp  actionAreaVertex.h  actionBroadecastEvent.cpp  actionBroadecastEvent.h  actionPoint.cpp  actionPoint.h  actionPointActivationSwitcher.cpp  actionPointActivationSwitcher.h  actionPointComponent.cpp  actionPointComponent.h  actionPointDataDef.cpp  actionPointDataDef.h  actionPointManager.cpp  actionPointManager.h  actionPointManagerListener.h  actionPointReservationReleaseHandler.cpp  actionPointReservationReleaseHandler.h  actionPointSelectors.cpp  actionPointSelectors.h  actor.cpp  actor.h  actorAction.cpp  actorAction.h  actorActionAnimation.cpp  (+1664 more)
dev/src/common/gpuApiDX10/: CMakeLists.txt  build.h  gpuApi.cpp  gpuApi.h  gpuApiBase.h  gpuApiBuffer.cpp  gpuApiDDSLoader.cpp  gpuApiDDSLoader.h  gpuApiDX10.vcxproj  gpuApiDX10.vcxproj.filters  gpuApiDX10.vcxproj.vspscc  gpuApiDX10_2022.vcxproj  gpuApiDevice.cpp  gpuApiDeviceState.cpp  gpuApiDrawContext.cpp  gpuApiGamma.cpp  gpuApiGamma.h  gpuApiMapping.h  gpuApiQuery.cpp  gpuApiRender.cpp  gpuApiRenderState.cpp  gpuApiRenderState.h  gpuApiRenderTarget.cpp  gpuApiSamplerStates.cpp  gpuApiShader.cpp  gpuApiTexture.cpp  gpuApiVertexLayouts.cpp
dev/src/common/gpuApiOpenGL/: CMakeLists.txt  gpuApi.h  gpuApiBase.h  gpuApiBuffer.cpp  gpuApiDevice.cpp  gpuApiDrawContext.cpp  gpuApiMapping.h  gpuApiOpenGL.vcxproj  gpuApiOpenGL_2022.vcxproj  gpuApiRender.cpp  gpuApiRenderState.cpp  gpuApiRenderState.h  gpuApiRenderTarget.cpp  gpuApiSamplerStates.cpp  gpuApiShader.cpp  gpuApiTexture.cpp  gpuApiVertexLayouts.cpp
dev/src/common/gpuApiUtils/: CMakeLists.txt  gpuApiCommon.cpp  gpuApiCommon.h  gpuApiContainer.h  gpuApiDDSLoader.cpp  gpuApiDDSLoader.h  gpuApiErrorHandling.h  gpuApiInterface.h  gpuApiMappingCommon.h  gpuApiMemory.cpp  gpuApiMemory.h  gpuApiMemoryClasses.h  gpuApiMemoryPools.h  gpuApiRenderCommon.h  gpuApiSamplerCommon.h  gpuApiShaderParsing.cpp  gpuApiShaderParsing.h  gpuApiTypes.h  gpuApiUtils.cpp  gpuApiUtils.h  gpuApiUtils.vcxproj  gpuApiUtils.vcxproj.filters  gpuApiUtils.vcxproj.vspscc  gpuApiUtils_2022.vcxproj  gpuApiVertexDeclarations.h  gpuApiVertexFormats.cpp  gpuApiVertexFormats.h  gpuApiVertexLayoutsCommon.cpp  gpuApiVertexPacking.cpp  gpuApiVertexPacking.h
dev/src/common/matcompiler/: CMakeLists.txt  build.cpp  build.h  legacyBlocks.cpp  matClasses.cpp  matNames.cpp  matNamesRegistry.h  matTypeRegistry.h  matcompiler.h  matcompiler.vcxproj  matcompiler.vcxproj.filters  matcompiler.vcxproj.vspscc  matcompiler_2022.vcxproj  materialCompiler.cpp  materialCompiler.h  materialDefaults.cpp  materialDefaults.h  materialPixelShaderCompiler.cpp  materialPixelShaderCompiler.h  materialShaderCompiler.cpp  materialShaderCompiler.h  materialShaderConstants.h  materialVertexShaderCompiler.cpp  materialVertexShaderCompiler.h  mbAmbientLight.cpp  mbBlendByDistance.cpp  mbCoarseReflection.cpp  mbColorShift.cpp  mbColorShiftRB.cpp  mbCombineNormals.cpp  mbConvertGammaToLinear.cpp  mbConvertLinearToGamma.cpp  mbCustomFunction.cpp  mbDerivativeNormal.cpp  mbDerivativeNormal.h  mbDithering.cpp  mbEnvTransparencyColorFilter.cpp  mbForwardLight.cpp  mbForwardLightCustom.cpp  mbForwardLightCustom.h  (+128 more)
dev/src/common/nullrender/: CMakeLists.txt  build.h  nullCommands.cpp  nullFragments.cpp  nullRender.cpp  nullRender.h  nullScaleformCommands.cpp  nullrender.vcxproj  nullrender.vcxproj.filters  nullrender.vcxproj.vspscc  nullrender_2022.vcxproj
dev/src/common/physics/: CMakeLists.txt  PhysXStreams.cpp  PhysXStreams.h  PhysicsWrappersDefinition.h  build.h  compiledCollision.cpp  compiledCollision.h  physXCpuDispatcher.cpp  physXCpuDispatcher.h  physXEngine.cpp  physXEngine.h  physicalCallbacks.h  physicalCollision.cpp  physicalCollision.h  physicalMaterial.h  physics.vcxproj  physics.vcxproj.filters  physicsChainedRagdollWrapper.h  physicsChainedRagdollWrapperPhysx.cpp  physicsContactListener.h  physicsDebugger.h  physicsDebuggerPhysx.cpp  physicsEngine.cpp  (+30 more)
(+4542 files in other folders)
