project(core)

set(TARGET_TYPE "StaticLibrary")
include(${CMAKE_SOURCE_DIR}/cmake/BuildOptions.cmake)

set(SRC_FILES
    "analyzer.cpp"
    "asyncFileAccess.cpp"
    "asyncIO.cpp"
    "asyncLoadToken.cpp"
    "basicDataBlob.cpp"
    "basicTextBuilder.cpp"
    "basicURL.cpp"
    "bezier2d.cpp"
    "bezier2dHandle.cpp"
    "bezierUtils.cpp"
    "bitset.cpp"
    "bufferedTempFile.cpp"
    "bufferSpan.cpp"
    "bundleBufferToFilesInterchange.cpp"
    "bundleDataCache.cpp"
    "bundleDataHandleReader.cpp"
    "bundledefinition.cpp"
    "bundleDepotPopulator.cpp"
    "bundleFileReaderDecompression.cpp"
    "chunkedLZ4File.cpp"
    "commandLineParser.cpp"
    "configVarLegacyWrapper.cpp"
    "configVar.cpp"
    "configVarHierarchy.cpp"
    "configVarRegistry.cpp"
    "contentManifestParser.cpp"
    "crypto.cpp"
    "debugPageBundles.cpp"
    "debugPageDepot.cpp"
    "debugPageFileHandleCache.cpp"
    "debugPageFios2.cpp"
    "debugPageHandler.cpp"
    "debugPageHTMLDoc.cpp"
    "debugPageMemory.cpp"
    "debugPageResource.cpp"
    "deferredDataBufferOOMQueue.cpp"
    "dependencyFileGluer.cpp"
    "dependencyFileUnpacker.cpp"
    "diskBundleCache.cpp"
    "diskBundleCacheEntry.cpp"
    "htmlDocument.cpp"
    "httpHeader.cpp"
    "httpRequestParser.cpp"
    "httpResponseData.cpp"
    "httpResponseSender.cpp"
    "httpServer.cpp"
    "debugPageServer.cpp"
    "deferredDataBufferAsync.cpp"
    "deferredDataBufferKickoff.cpp"
    "deferredDataBufferLoaders.cpp"
    "diskBundleContent.cpp"
    "diskBundlePreloader.cpp"
    "fileDecompression.cpp"
    "fileDecompressionAsyncFileWrapper.cpp"
    "fileDecompressionImpl.cpp"
    "fileShadowWriter.cpp"
    "fileSystemProfiler.cpp"
    "fileSystemProfilerWrapper.cpp"
    "idAllocator.cpp"
    "indexed2dArray.cpp"
    "ioTagResolver.cpp"
    "keyboardRecognizer.cpp"
    "memoryAdapter.cpp"
    "memoryHelpers.cpp"
    "messagePump.cpp"
    "namesReporter.cpp"
    "objectAllocationTracer.cpp"
    "debugPageObjects.cpp"
    "objectGCLock.cpp"
    "pagedMemoryWriter.cpp"
    "profilerBlockFileWriter.cpp"
    "profilerFileWriter.cpp"
    "redTelemetryServiceDDI.cpp"
    "remoteConfig.cpp"
    "configVarStorage.cpp"
    "configVarSystem.cpp"
    "contentManager.cpp"
    "contentManifest.cpp"
    "contentManifestAsyncLoader.cpp"
    "datetime.cpp"
    "deferredDataBuffer.cpp"
    "deferredDataBufferExtractor.cpp"
    "dependencyFileTables.cpp"
    "dependencyFileTablesBuilder.cpp"
    "depotBundles.cpp"
    "directory.sourcecontrol.cpp"
    "directoryEntries.cpp"
    "diskBundle.cpp"
    "diskBundleIOCache.cpp"
    "fileHandleCache.cpp"
    "fileHandleReader.cpp"
    "bundleMetadataStore.cpp"
    "bundlePreambleParser.cpp"
    "debugBundleHeaderParser.cpp"
    "decompresstask.cpp"
    "dependencyCache.cpp"
    "bundleMetadataStoreBuilder.cpp"
    "fileStringReader.cpp"
    "genericFence.cpp"
    "intelProfilerTool.cpp"
    "ioBufferAcquireContext.cpp"
    "loadingJob.cpp"
    "loadingJobManager.cpp"
    "loadingJobThread.cpp"
    "loadingProfiler.cpp"
    "newRedProfilerTool.cpp"
    "nullFile.cpp"
    "nvidiaProfilerTool.cpp"
    "objectDiscardList.cpp"
    "objectGC.cpp"
    "objectGC_Legacy.cpp"
    "objectGC_MarkAndSweep.cpp"
    "objectIterator.cpp"
    "objectMap.cpp"
    "objectReachability.cpp"
    "objectRootSet.cpp"
    "pixProfilerTool.cpp"
    "playGoPackage.cpp"
    "pool.cpp"
    "profilerChannels.cpp"
    "profilerManager.cpp"
    "profilerToolPool.cpp"
    "profiler/newRedProfiler.cpp"
    "profiler/profilerFile.cpp"
    "razorProfilerTool.cpp"
    "redProfiler.cpp"
    "redProfilerTool.cpp"
    "referencable.cpp"
    "clipboardBase.cpp"
    "compressedNumSerializer.cpp"
    "compression/chainedzlib.cpp"
    "compression/compression.cpp"
    "compression/doboz.cpp"
    "compression/lz4.cpp"
    "compression/lz4hc.cpp"
    "compression/snappy.cpp"
    "compression/zlib.cpp"
    "coreClasses.cpp"
    "coreNames.cpp"
    "coreNatives.cpp"
    "curve3DData.cpp"
    "curveBase.cpp"
    "curveData.cpp"
    "curveSimple.cpp"
    "dataError.cpp"
    "explatformos.cpp"
    "file.cpp"
    "fileFormat.cpp"
    "filePath.cpp"
    "fileSys.cpp"
    "gameApplication.cpp"
    "gameConfiguration.cpp"
    "kdTree.cpp"
    "kdTreeSearchUtils.cpp"
    "kdTreeSplitter.cpp"
    "kdTreeUtils.cpp"
    "memory.cpp"
    "memoryFileAnalizer.cpp"
    "memoryFileReader.cpp"
    "memoryFileWriter.cpp"
    "dataBuffer.cpp"
    "latentDataBuffer.cpp"
    "bitField.cpp"
    "class.cpp"
    "defaultValue.cpp"
    "enum.cpp"
    "function.cpp"
    "functionBuilder.cpp"
    "functionCalling.cpp"
    "pointer.cpp"
    "resourcedatabasegraphgeneration.cpp"
    "sha256.cpp"
    "sharedDataBuffer.cpp"
    "sharedDataBufferImpl.cpp"
    "streamingInstaller.cpp"
    "xvcPackage.cpp"
    "resourceLoading.cpp"
    "resourcepaths.cpp"
    "resourceUnloading.cpp"
    "ringAllocator.cpp"
    "scriptable.cpp"
    "scriptableState.cpp"
    "scriptableStateMachine.cpp"
    "scriptCodeNodeCompilationPool.cpp"
    "scriptsOpcodeExaminer.cpp"
    "serializable.cpp"
    "redTelemetryService.cpp"
    "redTelemetryServiceInterface.cpp"
    "redTelemetryServicesManager.cpp"
    "namesPool.cpp"
    "packageManager.cpp"
    "property.cpp"
    "propertyBuilder.cpp"
    "dependencygraph.cpp"
    "resourcedatabase.cpp"
    "resourcedatabasepool.cpp"
    "rttiSerializer.cpp"
    "rttiSystem.cpp"
    "rttiType.cpp"
    "serializationDispatchJob.cpp"
    "serializationStreamBuilder.cpp"
    "serializationStreamParser.cpp"
    "simplexTree.cpp"
    "softHandle.cpp"
    "codeParser.cpp"
    "softHandleProcessor.cpp"
    "streamingGrid.cpp"
    "streamingGridHelpers.cpp"
    "stringConversion.cpp"
    "stringLocale.cpp"
    "systemOrbis.cpp"
    "tagList.cpp"
    "task.cpp"
    "taskAllocator.cpp"
    "taskDebug.cpp"
    "taskDeque.cpp"
    "taskDispatcher.cpp"
    "taskManager.cpp"
    "taskRunner.cpp"
    "taskSchedList.cpp"
    "taskSchedNode.cpp"
    "taskSchedTimer.cpp"
    "taskScheduler.cpp"
    "taskBatch.cpp"
    "taskThread.cpp"
    "redTelemetryServiceConfig.cpp"
    "redTelemetryServiceImplWin32.cpp"
    "telemetryTool.cpp"
    "variant.cpp"
    "variantArray.cpp"
    "object.cpp"
    "objectNatives.cpp"
    "objectUtils.cpp"
    "crt.cpp"
    "events.cpp"
    "os.cpp"
    "sync.cpp"
    "systemWin32.cpp"
    "profiler.cpp"
    "versionControl.cpp"
    "feedback.cpp"
    "jobGenericJobs.cpp"
    "math.cpp"
    "mathUtils.cpp"
    "randomSystem.cpp"
    "frustum.cpp"
    "engineQsTransform.cpp"
    "engineTransform.cpp"
    "engineTime.cpp"
    "string.cpp"
    "tokenizer.cpp"
    "wildcard.cpp"
    "dynarray.cpp"
    "longBitField.cpp"
    "2darray.cpp"
    "cooker.cpp"
    "depot.cpp"
    "directory.cpp"
    "diskFile.cpp"
    "diskPackage.cpp"
    "exporter.cpp"
    "factory.cpp"
    "gatheredResource.cpp"
    "importer.cpp"
    "resource.cpp"
    "resourceDefManager.cpp"
    "resourcePath.cpp"
    "thumbnail.cpp"
    "dependencyLinker.cpp"
    "dependencyLinkerFactory.cpp"
    "dependencyLoader.cpp"
    "dependencyLoader2dArray.cpp"
    "dependencyMapper.cpp"
    "dependencySaver.cpp"
    "dependencySaver2dArray.cpp"
    "fileLoadingStats.cpp"
    "xmlFile.cpp"
    "xmlFileReader.cpp"
    "xmlFileWriter.cpp"
    "xmlReader.cpp"
    "xmlWriter.cpp"
    "instanceBuffer.cpp"
    "instanceDataLayout.cpp"
    "instanceDataLayoutCompiler.cpp"
    "instanceVar.cpp"
    "handleMap.cpp"
    "scriptingSystem.cpp"
    "scriptCompiledCode.cpp"
    "scriptDebugger.cpp"
    "scriptDebuggerLocals.cpp"
    "scriptNativeFunctionMap.cpp"
    "scriptSnapshot.cpp"
    "scriptStackFrame.cpp"
    "scriptThread.cpp"
    "scriptThreadSerializer.cpp"
    "scriptCompiler.cpp"
    "scriptDefaultValue.cpp"
    "scriptFieldStubs.cpp"
    "scriptFunctionCompiler.cpp"
    "scriptLexer.cpp"
    "scriptTokenStream.cpp"
    "scriptTypeInfo.cpp"
    "scriptFileParser.cpp"
    "scriptFunctionParser.cpp"
    "scriptCodeGenerator.cpp"
    "scriptCodeNode.cpp"
    "scriptSyntaxNode.cpp"
    "scriptSyntaxNodeChecking.cpp"
    "scriptSyntaxNodeCodeGeneration.cpp"
    "scriptSyntaxNodeFunctions.cpp"
    "scriptSyntaxNodeTypes.cpp"
    "scriptCoreMath.cpp"
    "scriptCoreNatives.cpp"
    "scriptCoreOpcodes.cpp"
    "scriptCoreOperators.cpp"
    "scriptCoreString.cpp"
    "configFileManager.cpp"
    "runnable.cpp"
    "commandlet.cpp"
    "names.cpp"
    "build.cpp"
    "singleton.cpp"
)

if (WIN32)
    list(APPEND SRC_FILES "cpuRecognizer.cpp")
    list(APPEND SRC_FILES "diskInstrumentationPC.cpp")
endif()

set(BISON_FILES
    "scriptFileParser.bison"
    "scriptFunctionParser.bison:-pyyfunc_"
)
include(${CMAKE_SOURCE_DIR}/cmake/BisonGenerator.cmake)

add_library(${PROJECT_NAME} STATIC ${SRC_FILES})

target_link_libraries(${PROJECT_NAME})

target_precompile_headers(${PROJECT_NAME}
    PRIVATE
    build.h
)
